# Helpresh

./: .gitignore  README.md  app.py  conv_stream.py  convapp.py  efficient_stream.py  efficientnet_model.ipynb  gpt_stream.py  lr1e-4efficientB0_gradcam copy.ipynb  main.py  pyproject.toml  resize.ipynb  test_best_512_efficientB0.ipynb  visualizaion.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-issue-template.md
runs/Aug23_11-52-35_WIN-U155DU54OOI/: events.out.tfevents.1755917555.WIN-U155DU54OOI
runs/Aug24_14-05-01_WIN-U155DU54OOI/: events.out.tfevents.1756011901.WIN-U155DU54OOI
runs/Aug24_17-10-22_WIN-U155DU54OOI/: events.out.tfevents.1756023022.WIN-U155DU54OOI
runs/Aug24_19-11-39_WIN-U155DU54OOI/: events.out.tfevents.1756030299.WIN-U155DU54OOI
runs/Aug26_09-26-58_WIN-U155DU54OOI/: events.out.tfevents.1756168018.WIN-U155DU54OOI
runs/Aug26_20-41-33_WIN-U155DU54OOI/: events.out.tfevents.1756208493.WIN-U155DU54OOI
